Prevent the annotationLayer from overflowing (PR 15036 follow-up)
After the changes in PR 15036, in some cases the annotationLayer may cause an empty area to appear after the last page; one example is `f1040.pdf` in the test-suite.
This patch simply does the same thing as we already do in the textLayer, that is simply hide any overflow.

--- a/web/annotation_layer_builder.css
+++ b/web/annotation_layer_builder.css
@@ -41,6 +41,7 @@
   position: absolute;
   top: 0;
   left: 0;
+  overflow: hidden;
   font-size: calc(100px * var(--scale-factor));
   pointer-events: none;
   transform-origin: 0 0;
